webfont visibility fix

--- a/src/components/common/Layout/fonts.css
+++ b/src/components/common/Layout/fonts.css
@@ -9,6 +9,7 @@
     url('./fonts/geo-v11-latin-regular.woff') format('woff'),
     url('./fonts/geo-v11-latin-regular.ttf') format('truetype'),
     url('./fonts/geo-v11-latin-regular.svg#Geo') format('svg');
+  font-display: swap;
 }
 
 @font-face {
@@ -23,6 +24,7 @@
     url('./fonts/montserrat-v14-latin-regular.woff') format('woff'),
     url('./fonts/montserrat-v14-latin-regular.ttf') format('truetype'),
     url('./fonts/montserrat-v14-latin-regular.svg#Montserrat') format('svg');
+  font-display: swap;
 }
 
 @font-face {
@@ -37,6 +39,7 @@
     url('./fonts/merriweather-v21-latin-regular.woff') format('woff'),
     url('./fonts/merriweather-v21-latin-regular.ttf') format('truetype'),
     url('./fonts/merriweather-v21-latin-regular.svg#Merriweather') format('svg');
+  font-display: swap;
 }
 
 @font-face {
@@ -51,6 +54,7 @@
     url('./fonts/poppins-v9-latin-regular.woff') format('woff'),
     url('./fonts/poppins-v9-latin-regular.ttf') format('truetype'),
     url('./fonts/poppins-v9-latin-regular.svg#Poppins') format('svg');
+  font-display: swap;
 }
 
 @font-face {
@@ -64,6 +68,7 @@
     url('./fonts/roboto-v20-latin-300.woff') format('woff'),
     url('./fonts/roboto-v20-latin-300.ttf') format('truetype'),
     url('./fonts/roboto-v20-latin-300.svg#Roboto') format('svg');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -77,6 +82,7 @@
     url('./fonts/roboto-v20-latin-regular.woff') format('woff'),
     url('./fonts/roboto-v20-latin-regular.ttf') format('truetype'),
     url('./fonts/roboto-v20-latin-regular.svg#Roboto') format('svg');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -89,6 +95,7 @@
     url('./fonts/roboto-v20-latin-500.woff') format('woff'),
     url('./fonts/roboto-v20-latin-500.ttf') format('truetype'),
     url('./fonts/roboto-v20-latin-500.svg#Roboto') format('svg');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -101,4 +108,5 @@
     url('./fonts/roboto-v20-latin-700.woff') format('woff'),
     url('./fonts/roboto-v20-latin-700.ttf') format('truetype'),
     url('./fonts/roboto-v20-latin-700.svg#Roboto') format('svg');
+  font-display: swap;
 }
